Fix invisible links in success section

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -23,6 +23,15 @@ a.active {
 	outline: none;
 }
 
+section.success a:not(.btn),
+section.success a:hover:not(.btn),
+section.success a:focus:not(.btn),
+section.success a:active:not(.btn),
+section.success a.active:not(.btn) {
+	color: @anchor-success;
+	outline: none;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: @font-heading;
 	text-transform: uppercase;
