--- a/less/variables.less
+++ b/less/variables.less
@@ -5,6 +5,8 @@
 @theme-primary:    #2C3E50;
 @theme-success:    #18BC9C;
 
+@anchor-success:   @theme-primary;
+
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
 @gray-dark:        lighten(@gray-base, 20%);   // #333
